test/unit/goldens/testParseExprAtomTypeMemberFail.golden
Text: 'type ∈ t1'

Tokens: [type,∈,t1]

Expr Text: type ∈ t1

Error: Pacer.Class.Parser.parseWith:1:8:
  |
1 | type ∈ t1
  |        ^
unexpected 't'
expecting '{', '∅', or white space

